[gd_scene load_steps=4 format=3 uid="uid://bcuq7gjt3k5ce"]

[ext_resource type="Script" path="res://scripts/Battlefield.gd" id="1"]
[ext_resource type="Script" path="res://scripts/BattleStage.gd" id="2"]
[ext_resource type="Theme" path="res://themes/KeyboardDefenseTheme.tres" id="3"]

[node name="Battlefield" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3")
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.04, 0.035, 0.06, 1)

[node name="TopBar" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 48)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 16.0
offset_top = 12.0
offset_right = -16.0
offset_bottom = 60.0
grow_horizontal = 2

[node name="LessonLabel" type="Label" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Lesson"

[node name="GoldLabel" type="Label" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.98, 0.84, 0.44, 1)
text = "Gold: 0"
horizontal_alignment = 2

[node name="PauseButton" type="Button" parent="TopBar"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
text = "Pause"

[node name="ExitButton" type="Button" parent="TopBar"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
text = "Retreat"

[node name="TargetsLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 68.0
offset_right = 150.0
offset_bottom = 88.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.65, 0.86, 1, 1)
text = "Progress: 0 / 0"
horizontal_alignment = 1

[node name="PlayField" type="PanelContainer" parent="."]
layout_mode = 1
anchor_left = 0.03
anchor_top = 0.12
anchor_right = 0.97
anchor_bottom = 0.48
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0

[node name="FieldSurface" type="ColorRect" parent="PlayField"]
layout_mode = 2
color = Color(0.06, 0.055, 0.1, 1)

[node name="BattleStage" type="Control" parent="PlayField"]
layout_mode = 2
mouse_filter = 2
script = ExtResource("2")

[node name="Castle" type="Sprite2D" parent="PlayField/BattleStage"]
position = Vector2(80, 180)
scale = Vector2(3, 3)

[node name="Enemy" type="Sprite2D" parent="PlayField/BattleStage"]
position = Vector2(700, 180)
scale = Vector2(3, 3)

[node name="ProjectileLayer" type="Control" parent="PlayField/BattleStage"]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="BuffHud" type="PanelContainer" parent="PlayField"]
visible = false
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Content" type="VBoxContainer" parent="PlayField/BuffHud"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Title" type="Label" parent="PlayField/BuffHud/Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.98, 0.84, 0.44, 1)
text = "Active Buffs"
horizontal_alignment = 1

[node name="FocusRow" type="HBoxContainer" parent="PlayField/BuffHud/Content"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="FocusLabel" type="Label" parent="PlayField/BuffHud/Content/FocusRow"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Focus"

[node name="FocusBar" type="ProgressBar" parent="PlayField/BuffHud/Content/FocusRow"]
custom_minimum_size = Vector2(80, 12)
layout_mode = 2
max_value = 1.0
show_percentage = false

[node name="WardRow" type="HBoxContainer" parent="PlayField/BuffHud/Content"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="WardLabel" type="Label" parent="PlayField/BuffHud/Content/WardRow"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Ward"

[node name="WardBar" type="ProgressBar" parent="PlayField/BuffHud/Content/WardRow"]
custom_minimum_size = Vector2(80, 12)
layout_mode = 2
max_value = 1.0
show_percentage = false

[node name="TypingPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchor_left = 0.1
anchor_top = 0.5
anchor_right = 0.9
anchor_bottom = 0.68
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0

[node name="Content" type="VBoxContainer" parent="TypingPanel"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="DrillTitle" type="Label" parent="TypingPanel/Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(0.98, 0.84, 0.44, 1)
text = "Drill Title"
horizontal_alignment = 1

[node name="DrillHint" type="Label" parent="TypingPanel/Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.65, 0.7, 0.82, 1)
text = "Type the words to defend the castle."
horizontal_alignment = 1
autowrap_mode = 3

[node name="DrillTarget" type="RichTextLabel" parent="TypingPanel/Content"]
layout_mode = 2
theme_override_colors/default_color = Color(0.94, 0.94, 0.98, 1)
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="FeedbackLabel" type="Label" parent="TypingPanel/Content"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.45, 0.82, 0.55, 1)
horizontal_alignment = 1

[node name="TypingReadout" type="VBoxContainer" parent="TypingPanel/Content"]
layout_mode = 2
theme_override_constants/separation = 4
alignment = 1

[node name="WordLabel" type="Label" parent="TypingPanel/Content/TypingReadout"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(0.94, 0.94, 0.98, 0.5)
text = ""
horizontal_alignment = 1

[node name="TypedLabel" type="Label" parent="TypingPanel/Content/TypingReadout"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(0.65, 0.86, 1, 1)
text = ""
horizontal_alignment = 1

[node name="StatusPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchor_left = 0.03
anchor_top = 0.7
anchor_right = 0.48
anchor_bottom = 0.95
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -8.0

[node name="Content" type="VBoxContainer" parent="StatusPanel"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="CastleMarker" type="Label" parent="StatusPanel/Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.98, 0.84, 0.44, 1)
text = "Castle Status"

[node name="CastleLabel" type="Label" parent="StatusPanel/Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Health: 3 / 3"

[node name="ThreatBar" type="ProgressBar" parent="StatusPanel/Content"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_horizontal = 3
show_percentage = false

[node name="Spacer1" type="Control" parent="StatusPanel/Content"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2

[node name="AccuracyLabel" type="Label" parent="StatusPanel/Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Accuracy: 100%"

[node name="MistakesLabel" type="Label" parent="StatusPanel/Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Errors: 0"

[node name="WpmLabel" type="Label" parent="StatusPanel/Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "WPM: 0"

[node name="BonusPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchor_left = 0.52
anchor_top = 0.7
anchor_right = 0.97
anchor_bottom = 0.95
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -8.0

[node name="Content" type="VBoxContainer" parent="BonusPanel"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="BonusTitle" type="Label" parent="BonusPanel/Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.98, 0.84, 0.44, 1)
text = "Active Bonuses"

[node name="BonusLabel" type="Label" parent="BonusPanel/Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "No bonuses active"
autowrap_mode = 3

[node name="ResultPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchor_left = 0.15
anchor_top = 0.2
anchor_right = 0.85
anchor_bottom = 0.8

[node name="Overlay" type="ColorRect" parent="ResultPanel"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -500.0
offset_top = -300.0
offset_right = 500.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="Content" type="VBoxContainer" parent="ResultPanel"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="ResultLabel" type="Label" parent="ResultPanel/Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Victory!"
horizontal_alignment = 1
autowrap_mode = 3

[node name="ResultButton" type="Button" parent="ResultPanel/Content"]
custom_minimum_size = Vector2(160, 44)
layout_mode = 2
size_flags_horizontal = 4
text = "Continue"

[node name="PausePanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.75
anchor_bottom = 0.75

[node name="Overlay" type="ColorRect" parent="PausePanel"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -200.0
offset_right = 400.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="Content" type="VBoxContainer" parent="PausePanel"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="PauseLabel" type="Label" parent="PausePanel/Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(0.98, 0.84, 0.44, 1)
text = "Paused"
horizontal_alignment = 1

[node name="ButtonRow" type="HBoxContainer" parent="PausePanel/Content"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="ResumeButton" type="Button" parent="PausePanel/Content/ButtonRow"]
custom_minimum_size = Vector2(120, 44)
layout_mode = 2
text = "Resume"

[node name="RetreatButton" type="Button" parent="PausePanel/Content/ButtonRow"]
custom_minimum_size = Vector2(120, 44)
layout_mode = 2
text = "Retreat"

[node name="DebugPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchor_left = 0.08
anchor_top = 0.08
anchor_right = 0.92
anchor_bottom = 0.92

[node name="Overlay" type="ColorRect" parent="DebugPanel"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Content" type="VBoxContainer" parent="DebugPanel"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Header" type="Label" parent="DebugPanel/Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.98, 0.84, 0.44, 1)
text = "Debug: Drill Overrides (JSON)"
horizontal_alignment = 1

[node name="OverridesText" type="TextEdit" parent="DebugPanel/Content"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
wrap_mode = 1

[node name="ButtonRow" type="HBoxContainer" parent="DebugPanel/Content"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="ApplyButton" type="Button" parent="DebugPanel/Content/ButtonRow"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Apply"

[node name="CopyButton" type="Button" parent="DebugPanel/Content/ButtonRow"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Copy JSON"

[node name="CloseButton" type="Button" parent="DebugPanel/Content/ButtonRow"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Close"

[node name="StatusLabel" type="Label" parent="DebugPanel/Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.65, 0.7, 0.82, 1)
text = "Press Apply to reload drill configuration."
horizontal_alignment = 1
autowrap_mode = 3
